--- a/Equipos.html
+++ b/Equipos.html
@@ -8,143 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <link rel="stylesheet" href="estilos.css">
 
-        /* Header */
-        header {
-            background-color: #600020;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .logo {
-            color: white;
-            font-size: 42px;
-            font-weight: bold;
-            font-family: 'Racing Sans One', cursive;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            letter-spacing: 2px;
-        }
-
-        /* Nav */
-        nav {
-            background-color: #333;
-            padding: 15px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            font-size: 18px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        /* Contenido Equipos */
-        .teams-content {
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .teams-title {
-            color: #600020;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 32px;
-            margin-bottom: 30px;
-            text-align: center;
-            text-transform: uppercase;
-        }
-
-        .teams-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
-
-        .team-card {
-            background: #f5f5f5;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        .team-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .team-info {
-            padding: 20px;
-        }
-
-        .team-name {
-            color: #600020;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 20px;
-            margin-bottom: 10px;
-        }
-
-        .team-details {
-            color: #333;
-            font-size: 14px;
-            line-height: 1.6;
-        }
-
-        .team-stats {
-            margin-top: 15px;
-            padding-top: 15px;
-            border-top: 1px solid #ddd;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            .logo {
-                font-size: 32px;
-            }
-
-            nav a {
-                font-size: 16px;
-                padding: 8px 15px;
-                margin: 0 5px;
-            }
-        }
-        /* Estilo footer */
-        footer {
-        background-color: #333;
-        color: white;
-        padding: 30px 0;
-        margin-top: 50px;
-        text-align: center;
-    }
-
-    .social-icons {
-        margin-bottom: 20px;
-    }
-
-    .social-icons a {
-        color: white;
-        font-size: 24px;
-        margin: 0 15px;
-        text-decoration: none;
-    }
-
-    footer p {
-        font-size: 14px;
-        font-family: 'Orbitron', sans-serif;
-    }
-    </style>
 </head>
 <body>
     <!-- Header -->
