--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -9,142 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+    <link rel="stylesheet" href="estilos.css">
     
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Header y Nav */
-        header {
-            background-color: #600020;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .logo {
-            color: white;
-            font-size: 42px;
-            font-weight: bold;
-            font-family: 'Racing Sans One', cursive;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            letter-spacing: 2px;
-        }
-
-        nav {
-            background-color: #333;
-            padding: 15px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            font-size: 18px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        /* Estilos img y news */
-        .content {
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .image-section {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-            margin-bottom: 40px;
-        }
-
-        .news-image {
-            flex: 1;
-            max-width: 33%;
-            position: relative;
-        }
-
-        .news-image img {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        .news-text {
-            margin-top: 40px;
-        }
-
-        .news-item {
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .news-item:last-child {
-            border-bottom: none;
-        }
-
-        .news-title {
-            color: #610020;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .news-date {
-            color: #666;
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-
-        .news-content {
-            color: #333;
-            line-height: 1.6;
-        }
-
-        @media (max-width: 768px) {
-            .image-section {
-                flex-direction: column;
-            }
-
-            .news-image {
-                max-width: 100%;
-            }
-        }
-         /* Estilo footer */
-         footer {
-        background-color: #333;
-        color: white;
-        padding: 30px 0;
-        margin-top: 50px;
-        text-align: center;
-    }
-
-    .social-icons {
-        margin-bottom: 20px;
-    }
-
-    .social-icons a {
-        color: white;
-        font-size: 24px;
-        margin: 0 15px;
-        text-decoration: none;
-    }
-
-    footer p {
-        font-size: 14px;
-        font-family: 'Orbitron', sans-serif;
-    }
-    </style>
 </head>
 <body>
     <header>
