--- a/Nosotros.html
+++ b/Nosotros.html
@@ -8,180 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <link rel="stylesheet" href="estilos.css">
 
-        /* Header */
-        header {
-            background-color: #600020;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .logo {
-            color: white;
-            font-size: 42px;
-            font-weight: bold;
-            font-family: 'Racing Sans One', cursive;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            letter-spacing: 2px;
-        }
-
-        /* Navegación */
-        nav {
-            background-color: #333;
-            padding: 15px 0;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            font-size: 18px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
-        /* Nosotros */
-        .about-content {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .about-text {
-            margin-bottom: 50px;
-            text-align: justify;
-            line-height: 1.8;
-        }
-
-        .about-text h1 {
-            color: #600020;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 32px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .about-text p {
-            margin-bottom: 15px;
-            color: #333;
-        }
-
-        /* Formulario */
-        .comment-form {
-            background: #f5f5f5;
-            padding: 30px;
-            border-radius: 10px;
-            margin-bottom: 50px;
-        }
-
-        .comment-form h2 {
-            color: #600020;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 24px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            min-height: 100px;
-        }
-
-        .submit-btn {
-            background-color: #600020;
-            color: white;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-            width: 100%;
-        }
-
-        .submit-btn:hover {
-            background-color: #4a0019;
-        }
-
-        /* Mapa */
-        .map-container {
-            margin-bottom: 40px;
-        }
-
-        .map-container iframe {
-            width: 100%;
-            height: 400px;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        @media (max-width: 768px) {
-            .logo {
-                font-size: 32px;
-            }
-
-            nav a {
-                font-size: 16px;
-                padding: 8px 15px;
-                margin: 0 5px;
-            }
-        }
-        /* Estilo footer */
-        footer {
-        background-color: #333;
-        color: white;
-        padding: 30px 0;
-        margin-top: 50px;
-        text-align: center;
-    }
-
-    .social-icons {
-        margin-bottom: 20px;
-    }
-
-    .social-icons a {
-        color: white;
-        font-size: 24px;
-        margin: 0 15px;
-        text-decoration: none;
-    }
-
-    footer p {
-        font-size: 14px;
-        font-family: 'Orbitron', sans-serif;
-    }
-    </style>
 </head>
 <body>
     <!-- Header -->
